style.css
body {
    font-family: Arial, Helvetica, sans-serif;
}

#logo-searchbar {
    width: 50%;
    margin: auto;
    padding-top: 175px;
}

.center-img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 25px
}

input[type="text"] {
    display: block;
    margin: 0 auto;
    margin-top: 15px;
    width: 500px;
    height: 40px;
    border-style: solid;
    border-radius: 30px;
    border-width: 1px;
}

ul {
    list-style-type: none;
    margin: 0px;
    padding-bottom: 15px;
}

#nav {
    padding: 15px;
    font-size: 15px;
}

li a {
    padding: 0px 15px 0px 15px;
    text-decoration: none;
    color: black;
}

li a:hover {
    text-decoration: underline;
}

.signin {
    background-color: #4285F4;
    border-style: solid;
    border-radius: 5px;
    border-width: 1px;
    color: white;
    padding-top: 7px;
    padding-bottom: 7px;
}

#bottomnav {
    padding: 7px;
    font-size: 15px;
    background-color: #F3F3F3;
    width: 100%;
    position: fixed;
    bottom: 0;
    border-style: solid;
    border-color: #C9C9C9;
    border-width: 1px 0px 0px 0px;
}

